[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-session-security-continued"
version = "3.0.0a1"
description = "Client and server-side session timeout enforcement with warnings for Django 4.2+."
readme = "README.rst"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [
    { name = "Arrai Innovations", email = "support@arrai.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2,<5.3",
]

[project.urls]
repository = "https://github.com/arrai-innovations/django-session-security-continued"

[dependency-groups]
dev = [
    "build>=1.2.2",
    "coverage[toml]>=7.6.10",
    "django-coverage-plugin>=3.1.0",
    "md-toc>=8.2.2",
    "pre-commit>=4.1.0",
    "pytest>=8.3.0",
    "pytest-cov>=5.0.0",
    "pytest-django>=4.8.0",
    "pytest-sugar>=0.9.7",
    "ruff==0.12.12",
    "selenium>=4.21.0",
    "unittest-data-provider>=1.0.1",
]

[tool.uv]
default-groups = ["dev"]

[tool.ruff]
line-length = 120
target-version = "py39"
exclude = [
    ".git",
    ".github",
    ".circleci",
    "docs",
    "*/migrations/*",
]

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "A",
    "B0",
    "C4",
    "C90",
    "DJ",
    "E",
    "W",
    "F",
    "FIX",
    "G",
    "I",
    "INP",
    "N",
    "PLC",
    "PLE",
    "Q",
    "RUF",
    "S",
    "SIM",
    "T10",
    "T20",
    "TID",
    "UP",
]
ignore = [
    "E501",
    "FIX002",
    "FIX004",
    "PLC0415",
    "RUF005",
    "RUF019",
    "RUF021",
    "RUF051",
    "S101",
    "S308",
    "SIM105",
    "SIM108",
]

[tool.ruff.lint.per-file-ignores]
"*/tests/*" = [
    "B018",
    "DJ008",
    "N818",
    "RUF001",
    "RUF002",
    "RUF012",
    "S",
    "SIM",
]
"session_security/tests/project/settings.py" = ["S105"]
"test_project/test_project/settings.py" = ["S105"]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.isort]
known-first-party = ["session_security"]
force-single-line = true
lines-after-imports = 2

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.pep8-naming]
ignore-names = [
    "setUp",
    "tearDown",
    "setUpClass",
    "tearDownClass",
    "setUpModule",
    "tearDownModule",
    "asyncSetUp",
    "asyncTearDown",
    "setUpTestData",
    "failureException",
    "longMessage",
    "maxDiff",
    "assert*",
]

[tool.pytest.ini_options]
django_find_project = false
pythonpath = ["."]
DJANGO_SETTINGS_MODULE = "session_security.tests.project.settings"
addopts = "--ds=session_security.tests.project.settings --reuse-db"
testpaths = ["session_security/tests"]
python_files = ["test_*.py"]
markers = [
    "selenium: marks tests that require a browser",
]

[tool.coverage.run]
branch = true
parallel = true
source = ["session_security"]
omit = [
    "*/migrations/*",
]
concurrency = ["multiprocessing"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "except ImportError",
    "raise ImportError",
]

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["session_security*"]

[tool.setuptools.package-data]
"session_security" = [
    "*.html",
    "*.css",
    "*.js",
    "*.po",
    "*.mo",
]
